objects/SS_SF_Account_Sync__e.object
<CustomObject>
    <description>Platform events to capture account creation/modification in SS and sync to R4B Org using API GW.</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AptDesignator__c</fullName>
        <label>AptDesignator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AptNumber__c</fullName>
        <label>AptNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLConsInd__c</fullName>
        <label>BLConsInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillStatus__c</fullName>
        <label>BillStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToAddressLine1__c</fullName>
        <label>BillToAddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToAddressLine2__c</fullName>
        <label>BillToAddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToAddressLine3__c</fullName>
        <label>BillToAddressLine3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToAddressPostalCode__c</fullName>
        <label>BillToAddressPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToInd__c</fullName>
        <label>BillToInd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingLanguage__c</fullName>
        <label>BillingLanguage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastBusinessName__c</fullName>
        <label>LastBusinessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationLat__c</fullName>
        <label>LocationLat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationLong__c</fullName>
        <label>LocationLong</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressCompassDirection__c</fullName>
        <label>ServiceAddressCompassDirection</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressCountry__c</fullName>
        <label>ServiceAddressCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressMuncipality__c</fullName>
        <label>ServiceAddressMuncipality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressPostalCode__c</fullName>
        <label>ServiceAddressPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressProvince__c</fullName>
        <label>ServiceAddressProvince</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressStreetName__c</fullName>
        <label>ServiceAddressStreetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressStreetNumber__c</fullName>
        <label>ServiceAddressStreetNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAddressStreetType__c</fullName>
        <label>ServiceAddressStreetType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V21BAN__c</fullName>
        <label>V21BAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SS SF Account Sync</label>
    <pluralLabel>SS SF Account Sync</pluralLabel>
</CustomObject>